@@ -8,22 +8,26 @@ import com.duongw.commonservice.model.dto.response.file.FileResponseDTO;
 import com.duongw.commonservice.model.entity.Files;
 import com.duongw.commonservice.repository.FileRepository;
 import com.duongw.commonservice.service.IFileService;
+import com.duongw.commonservice.service.IMinIOService;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 import org.springframework.web.multipart.MultipartFile;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 public class FileService implements IFileService {
 
 
     private final FileRepository fileRepository;
+    private final IMinIOService minIOService;
 
 
     @Autowired
-    public FileService(FileRepository fileRepository) {
+    public FileService(FileRepository fileRepository, IMinIOService minIOService) {
         this.fileRepository = fileRepository;
+        this.minIOService = minIOService;
     }
 
 
@@ -52,89 +56,76 @@ public class FileService implements IFileService {
         return convertToFileResponseDTO(fileRepository.save(files));
     }
 
+
     @Override
     public void storeFiles(List<MultipartFile> files, String businessCode, String businessId) {
-        //TODO: store files by
-        if (files.isEmpty() || files == null) {
-            throw new InvalidDataException("File is empty");
+        if (files == null || files.isEmpty()) {
+            throw new InvalidDataException("Files cannot be empty");
         }
+
         for (MultipartFile file : files) {
+            // Upload to MinIO and get file path
+            String filePath = minIOService.uploadToMinIO(file, businessCode);
 
+            // Save file metadata to database
+            FileUploadRequest fileRequest = FileUploadRequest.builder()
+                    .fileName(file.getOriginalFilename())
+                    .filePath(filePath)
+                    .businessCode(businessCode)
+                    .businessId(Long.valueOf(businessId))
+                    .status(1L)
+                    .build();
 
-
-
-
+            saveFile(fileRequest);
         }
     }
 
     @Override
     public List<FileResponseDTO> getAllFile() {
         List<Files> files = fileRepository.findAll();
-        return files.stream().map(this::convertToFileResponseDTO).toList();
-
+        return files.stream().map(this::convertToFileResponseDTO).collect(Collectors.toList());
     }
 
-    @Override
-    public List<FileResponseDTO> searchFileByBusinessID(String businessCode, String businessId) {
-        return List.of();
-    }
 
-    @Override
-    public void deleteFilesByBusinessId(Long businessId) {
-        Files files = fileRepository.findByBusinessId(businessId);
-        if (files == null) {
-            throw new ResourceNotFoundException(Translator.toLocate("file.not-found"));
-        }
-        fileRepository.delete(files);
-
-    }
 
     @Override
     public void deleteFilesByBusinessCode(String businessCode) {
-        Files files = fileRepository.findByBusinessCode(businessCode);
-        if (files == null) {
-            throw new ResourceNotFoundException(Translator.toLocate("file.not-found"));
+        //TODO: delete files by businessCode
+        List<Files> files = fileRepository.findByBusinessCode(businessCode);
+        if (files == null || files.isEmpty()) {
+            for (Files file : files) {
+
+                fileRepository.delete(file);
+            }
         }
-        fileRepository.delete(files);
 
     }
 
+
     @Override
-    public FileResponseDTO getFile(String fileId) {
-        Files files = fileRepository.findById(Long.parseLong(fileId)).orElseThrow(()-> new ResourceNotFoundException(Translator.toLocate("file.not-found")));
+    public FileResponseDTO getFile(Long fileId) {
+
+        Files files = fileRepository.findById(fileId).orElseThrow(() -> new ResourceNotFoundException(Translator.toLocate("file.not-found")));
         return convertToFileResponseDTO(files);
     }
 
+
+
     @Override
-    public FileResponseDTO getFileByBusinessId(Long businessId) {
-        Files files = fileRepository.findByBusinessId(businessId);
-        if (files == null) {
-            throw new ResourceNotFoundException(Translator.toLocate("file.not-found"));
-        }
-        return convertToFileResponseDTO(files);
+    public List<FileResponseDTO> getFileByBusinessCode(String businessCode) {
+        return null;
     }
 
     @Override
-    public FileResponseDTO getFileByBusinessCode(String businessCode) {
-        Files files = fileRepository.findByBusinessCode(businessCode);
-        if (files == null) {
-            throw new ResourceNotFoundException(Translator.toLocate("file.not-found"));
-        }
-        return convertToFileResponseDTO(files);
+    public byte[] downloadFile(String path) {
+        return new byte[0];
     }
 
     @Override
-    public void downloadFile(Long fileId) {
-
+    public byte[] downloadFile(Long fileId) {
+        Files files = fileRepository.findById(fileId)
+                .orElseThrow(() -> new ResourceNotFoundException(Translator.toLocate("file.not-found")));
+        return minIOService.downloadFromMinIO(files.getFilePath());
     }
 
-    @Override
-    public void downloadFileByBusinessId(String businessId) {
-
-    }
-
-    @Override
-    public void downloadFileByBusinessCode(String businessCode) {
-
-    }
 }
